Fixes strange vertical shift

--- a/assets/css/tally.css
+++ b/assets/css/tally.css
@@ -7,15 +7,21 @@
 
 #tally_character_container { font: 14px/ 20px Arial; padding: 12px;
 	height: 222px; width: 223px; max-width: 100%;
-	left: 0; bottom: -167px; position: fixed; opacity: 1;
+	left: 0; bottom: -143px; position: fixed; opacity: 1;
 	/* bitmap method */
 	/* background-image:url('chrome-extension://__MSG_@@extension_id__/assets/img/tally-skins/skin-color-magenta.png');
 	background-repeat:no-repeat; */
 	/* testing
 	bottom: 100px;*/
+
+	/* fix Tally's strange vertical position shift */
+	box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
 }
-#tally_character_container button { padding:5px; margin: 3px; background: #111; border: 0; box-shadow: none; color: #fff }
-#tally_character { margin: 55px 0 0 30px; }
+#tally_character_container button { padding:5px; margin: 3px; background: #111; border: none; box-shadow: none; color: #fff;}
+#tally_character { margin: 55px 0 0 30px; width: 193px;
+	/* fix Tally's strange vertical position shift */
+	box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
+}
 
 
 svg#tally-svg { width: 223px; height: 222px; position: absolute; top: -10px; left: 0px;}
